@@ -32,6 +32,7 @@ dependencies {
     implementation(platform("org.lwjgl:lwjgl-bom:$lwjglVersion"))
 
     // 2. Las librerías de código (Interfaces de Java)
+
     implementation("org.lwjgl:lwjgl")        // Núcleo
     implementation("org.lwjgl:lwjgl-openal") // Audio
     implementation("org.lwjgl:lwjgl-stb")
@@ -39,6 +40,15 @@ dependencies {
     runtimeOnly("org.lwjgl:lwjgl::$lwjglNatives")
     runtimeOnly("org.lwjgl:lwjgl-openal::$lwjglNatives")
     runtimeOnly("org.lwjgl:lwjgl-stb::$lwjglNatives")
+
+    // JTransforms: El motor FFT de alto rendimiento
+    implementation("com.github.wendykierp:JTransforms:3.1")
+
+    // Minim y Soporte Nativo para OGG Vorbis
+    implementation("com.googlecode.soundlibs:tritonus-share:0.3.7.4")
+    implementation("com.googlecode.soundlibs:jorbis:0.0.17.4")
+    implementation("com.googlecode.soundlibs:vorbisspi:1.0.3.3")
+    implementation("net.compartmental.code:minim:2.2.2")
 }
 
 // Esto configura CUALQUIER tarea que ejecute Java (incluyendo 'gradle run')
@@ -48,6 +58,7 @@ tasks.withType<JavaExec> {
         "--add-opens=java.base/java.nio=ALL-UNNAMED",
         "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+        "--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED",
         "-Dorg.lwjgl.util.NoChecks=true",
         "-Dorg.lwjgl.system.allocator=system",
         "-XX:+IgnoreUnrecognizedVMOptions"
